--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>Startup Landing Page</title>
-  <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
+  <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/src/app.css">
@@ -11,26 +11,28 @@
 </body>
 </head>
 <body>
-  <header>
-    <h1>Welcome to polyrhythmd</h1>
-    <p>for the music critic in all of us</p>
-    <a href="https://github.com/Gabeyocum28/startup.git">My Github Repo</a>
-  </header>
+  <header class="banner">
+        <h1>Polyrhythmd</h1>
+        <a href="/index.html">Home</a>
+        <a href="/src/about/about.html">About</a>
+        <a href="/src/login/login.html">Login</a>
+        <a href="/src/register/register.html">Register</a>
+        <a href="/src/profile/profile.html">Profile</a>
+        <a href="/src/search/search.html">Search</a>
+        <a href="/src/album/album.html">Album</a>
+        <a href="/src/review/review.html">Review</a>
+        <a href="/src/feed/feed.html">Feed</a>
+    </header>
   <main>
     <nav>
-      <a href="/src/about/about.html">About</a>
-      <a href="/src/register/register.html">Register</a>
-      <a href="/src/login/login.html">Login</a>
-      <a href="/src/album/album.html">Album</a>
-      <a href="/src/review/review.html">Review</a>
-      <a href="/src/search/search.html">Search</a>
-      <a href="/src/profile/profile.html">Profile</a>
-      <a href="/src/edit/edit.html">Edit Profile</a>
-      <a href="/src/feed/feed.html">Feed</a>
+      <div class="text-center mt-5">
+        <h1>Welcome to Polyrhythmd</h1>
+        <p>Your gateway to exploring and reviewing albums.</p>
+      </div>
     </nav>
   </main>
   <footer>
     <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
-</footer>
+  </footer>
 </body>
 </html>
