--- a/src/about/about.html
+++ b/src/about/about.html
@@ -2,17 +2,23 @@
 <html lang="en">
 <head>
     <title>Startup Landing Page</title>
-    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/app.css">
 </head>
 <body> 
-    <header>
-        <h1>About polyrhythmd</h1>
-        <nav>
-            <a href="/index.html">Home</a>
-        </nav>
+    <header class="banner">
+        <h1>Polyrhythmd</h1>
+        <a href="/index.html">Home</a>
+        <a href="/src/about/about.html">About</a>
+        <a href="/src/login/login.html">Login</a>
+        <a href="/src/register/register.html">Register</a>
+        <a href="/src/profile/profile.html">Profile</a>
+        <a href="/src/search/search.html">Search</a>
+        <a href="/src/album/album.html">Album</a>
+        <a href="/src/review/review.html">Review</a>
+        <a href="/src/feed/feed.html">Feed</a>
     </header>
     <main>
         <section>
@@ -22,11 +28,11 @@
         </section>
         <section>
             <h2>Our Team</h2>
-            <img src="/public/images/gabriel_yocum_about_pfp.jpg" alt="Gabriel Yocum" style="width:200px;height:200px;">
+            <img src="/images/gabriel_yocum_about_pfp.jpg" alt="Gabriel Yocum" style="width:200px;height:200px;">
             <h3>Gabriel Yocum - Founder & CEO</h3>
             <p>Gabriel is a computer science student at Brigham Young University with a passion for music and technology. 
                 He founded polyrhythmd to create a space where music lovers can share their opinions and discover new tunes.</p>
-            <img src="/public/images/amur_bashirov_about_pfp.jpg" alt="Amur Bashirov" style="width:200px;height:200px;">    
+            <img src="/images/amur_bashirov_about_pfp.jpg" alt="Amur Bashirov" style="width:200px;height:200px;">    
             <h3>Amur Bashirov - TA & Chief Advisor</h3>
             <!--insert bio here if you want, delete your section if you dont want to be on here, I thought it would be funny-->
             <p></p>
