--- a/src/profile/profile.html
+++ b/src/profile/profile.html
@@ -2,21 +2,29 @@
 <html lang="en">
 <head>
     <title>User Profile</title>
-    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
-    <header type="banner">
-        <h1 type="banner">Polyrhythmd</h1>
-        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    <header class="banner">
+        <h1>Polyrhythmd</h1>
+        <a href="/index.html">Home</a>
+        <a href="/src/about/about.html">About</a>
+        <a href="/src/login/login.html">Login</a>
+        <a href="/src/register/register.html">Register</a>
+        <a href="/src/profile/profile.html">Profile</a>
+        <a href="/src/search/search.html">Search</a>
+        <a href="/src/album/album.html">Album</a>
+        <a href="/src/review/review.html">Review</a>
+        <a href="/src/feed/feed.html">Feed</a>
     </header>
     <main>
         <h1>Profile</h1>
-        <p type="dev">Data here will be in DB</p>
+        <p class="dev">Data here will be in DB</p>
         <h1>Hey John</h1>
-        <img src="/public/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
+        <img src="/images/blank_pfp.jpg" alt="Profile Photo" width="150" height="150">
         <ul>
             <li><strong>Username:</strong> johndoe</li>
             <li><strong>Email:</strong> johndoe@example.com</li>
@@ -25,7 +33,6 @@
             <li><strong>Phone:</strong> (555) 123-4567</li>
             <li><strong>Favorite Genres:</strong> Rock, Jazz, Classical</li>
         </ul>
-        <button onclick="window.location.href='/src/edit/edit.html'">Edit Profile</button>
         <button onclick="window.location.href='/index.html'">Logout</button>
     </main>
     <footer>
