--- a/src/search/search.html
+++ b/src/search/search.html
@@ -2,21 +2,29 @@
 <html lang="en">
 <head>
     <title>Album Review</title>
-    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
-    <p type="dev">Search will be helped by spotify api</p>
-    <header type="banner">
-        <h1 type="banner">Polyrhythmd</h1>
-        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    <header class="banner">
+        <h1>Polyrhythmd</h1>
+        <a href="/index.html">Home</a>
+        <a href="/src/about/about.html">About</a>
+        <a href="/src/login/login.html">Login</a>
+        <a href="/src/register/register.html">Register</a>
+        <a href="/src/profile/profile.html">Profile</a>
+        <a href="/src/search/search.html">Search</a>
+        <a href="/src/album/album.html">Album</a>
+        <a href="/src/review/review.html">Review</a>
+        <a href="/src/feed/feed.html">Feed</a>
     </header>
     <main>
+        <p class="dev">Search will be helped by spotify api</p>
         <h1>Search</h1>
         <label for="album-search">Search Album:</label>
-        <input id="album-search" name="album-search" type="standard" placeholder="Enter album name">
+        <input id="album-search" name="album-search" class="standard" placeholder="Enter album name">
         <div>
             <button type="button" onclick="window.location.href='/src/feed/feed.html'">Back</button>
             <button type="button" onclick="window.location.href='/src/album/album.html'">Search</button>
