--- a/src/album/album.html
+++ b/src/album/album.html
@@ -2,24 +2,32 @@
 <html lang="en">
 <head>
     <title>Album Viewer</title>
-    <link rel="icon" href="/public/polyrhythmd_orange_pink_gradient.ico" />
+    <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/app.css">
 </head>
 <body>
-    <header type="banner">
-        <h1 type="banner">Polyrhythmd</h1>
-        <button type="button aura" onclick="window.location.href='/index.html'">Home</button>
+    <header class="banner">
+        <h1>Polyrhythmd</h1>
+        <a href="/index.html">Home</a>
+        <a href="/src/about/about.html">About</a>
+        <a href="/src/login/login.html">Login</a>
+        <a href="/src/register/register.html">Register</a>
+        <a href="/src/profile/profile.html">Profile</a>
+        <a href="/src/search/search.html">Search</a>
+        <a href="/src/album/album.html">Album</a>
+        <a href="/src/review/review.html">Review</a>
+        <a href="/src/feed/feed.html">Feed</a>
     </header>
     <main>
-        <p type="dev">Data from here will be from spotify api</p>
+        <p class="dev">Data from here will be from spotify api</p>
         <div>
             <h1>IGOR</h1>
             <h3>by Tyler, the Creator</h3>
             <img src="igor.jpg" alt="Album Art" width="200" height="200">
             <p>Award-winning album by Tyler, the Creator, released in 2019.</p>
-            <p type="dev">Data from here will be in DB</p>
+            <p class="dev">Data from here will be in DB</p>
             <p>Average Rating: ★★★★☆ (4.5)</p>
             <p>Total Reviews: 1500</p>
             <button type="button" onclick="window.location.href='/src/review/review.html'">Write a Review</button>
@@ -27,7 +35,7 @@
         <hr>  
 
         <div>
-            <p type="dev">Data from here will be in DB</p>
+            <p class="dev">Data from here will be in DB</p>
             <h2>Reviews</h2>
             <div>
                 <h3>Great Album!</h3>
