--- a/index.html
+++ b/index.html
@@ -1,38 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Startup Landing Page</title>
-  <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/src/app.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+  <title>Polyrhythmd</title>
+  <link rel="icon" href="/polyrhythmd_orange_pink_gradient.ico" />
 </head>
 <body>
-  <header class="banner">
-        <h1>Polyrhythmd</h1>
-        <a href="/index.html">Home</a>
-        <a href="/src/about/about.html">About</a>
-        <a href="/src/login/login.html">Login</a>
-        <a href="/src/register/register.html">Register</a>
-        <a href="/src/profile/profile.html">Profile</a>
-        <a href="/src/search/search.html">Search</a>
-        <a href="/src/album/album.html">Album</a>
-        <a href="/src/review/review.html">Review</a>
-        <a href="/src/feed/feed.html">Feed</a>
-    </header>
-  <main>
-    <nav>
-      <div class="text-center mt-5">
-        <h1>Welcome to Polyrhythmd</h1>
-        <p>Your gateway to exploring and reviewing albums.</p>
-      </div>
-    </nav>
-  </main>
-  <footer>
-    <p>&copy; 2025 polyrhythmd. All rights reserved.</p>
-  </footer>
+  <div id="root"></div>
+  <script type="module" src="/index.jsx"></script>
 </body>
 </html>
